@@ -1,7 +1,9 @@
  1.5 (June XX, 2013)
 =====================
 Added ArmorUtils (converts between world and armor grid coordinates)
-Added DefenseType enumeration (HULL, ARMOR, SHIELD, PHASE)
+Re-added DefenseType enumeration (HULL, ARMOR, SHIELD, PHASE)
+Changes to CollisionUtils:
+ - Fixed bug with isPointInBounds() and points exactly on the boundary edges
 Changes to SimpleEntity:
  - New constructor SimpleEntity(Vector2f location, CombatEntityAPI anchor)
    getLocation() will return a location relative to and rotated with the anchor
